# cover-agent

./: .dockerignore  .gitignore  cc_agent.Dockerfile
cc_examples/buddy/: buddy_allocator.c  buddy_allocator.h  main.c
cc_examples/buddy/ut/: CMakeLists.txt  buddy_allocator_test.cpp  build_and_test_with_coverage.sh
